2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.h game.cpp
	  - first bits of result recording and display, rather experimental.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* smokestream.cpp
	  - segfault reason found & fixed

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* begun Win32 Port.
	  It compiles, links and runs, BUT:
	  - there is no mouse pointer.
	  - models are not read or drawn right, they look like rotated
	    around their length axis and normal vectors inverted.
	  - many dirty hacks are neccessary to work with Visual C++ 6,
	    most ugly:
	    #define for if(0);else for to avoid VC6 compiler bug.
	    change private: to public: (VC6 ignores friend decl.)
	    Disabled glPaletteEXT (MSDN says "ok", VC6 says "no")
	  - You'll need to alter the SDL paths in the project file.
	  - Possible trash of memory after exit (Win98 crashed 20 seconds
	    later)
	  - Speed seems ok.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* convoy.cpp game.cpp subsim.cpp
	  - first bits of custom mission generation.

2003-07-05  Thorsten Jordan <thorsten_jordan@gmx.de>
	* ship_corvette.* and related files.
	  - new model.
	* ai.cpp
	  - made destroyer course computation a bit smarter.
	* game.h game.cpp user_interface.cpp
	  - new clouds.
	* submarine_interface.cpp user_interface.cpp
	  - head to course is shown in gauge.
	* angle.h
	  - removed silly operator<,>,<=,>= functions.

2003-07-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* smoke_stream.* ship.*
	  - made smoke less denser and reduce particle number
	* ship.h ship.cpp
	  - moved ai/smoke_stream related methods to .cpp file to reduce
	    header file dependencies. This should be done everywhere to
	    reduce compile times for developing. Seems ok so far.
	* ai.h ai.cpp
	  - shifted dependencies.

2003-07-03  Thorsten Jordan <thorsten_jordan@gmx.de>
	* menu.h menu.cpp
	  - improved menu design and input
	* model.h model.cpp