@@ -1,4 +1,8 @@
 2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* game.cpp
+	  - end game when contact to enemy is lost
+
+2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* game.h game.cpp
 	  - first bits of result recording and display, rather experimental.
 
